# TankTerminal

./: .gitignore  CMakeLists.txt  README.md  app.cpp  game.cpp  managegame.cpp  slicing.cpp  tank.cpp  window.h
include/: bullet.h  game.h  managegame.h  non_player_elements.cpp  non_player_elements.h  renderer.h  specials.h  tank.h  tank_constants.h  tank_directions.h  wall.h  window.h
include/elements/: bullet.h  element.h  mine.h  rocket.h  zap.h
src/: CMakeLists.txt  app.cpp  game.cpp  managegame.cpp  non_player_elements.cpp  tank.cpp  wall.cpp  window.cpp
src/elements/: CMakeLists.txt  bullet.cpp  element.cpp  mine.cpp  rocket.cpp  zap.cpp
